# University

./: README.md  pyproject.toml  repo_manager.py
HomeWork_1/: leap_year.py  lucky_ticket.py
HomeWork_2/: main_1.py  main_2.py
HomeWork_3/: main_1.py
HomeWork_4/: main.py  решение.txt
HomeWork_5/: main.py
HomeWork_6/: main.py
HomeWork_7/: main.py
HomeWork_8/: customer_descriptions.txt  main.py
HomeWork_9/: main.py
Lab_1/: main.py
Lab_2/: main.py
Lab_3/: main.py
Lab_4/: data.xml  main.py
